--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -6,15 +6,48 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mypersonalstyle.css') }}">
     <title>Dashboard</title>
+
   </head>
   <body>
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+    {% block body %}{% endblock %}
     <div class="w3-row">
-     <div class="w3-half w3-container">
-       <h2>Groups</h2>
-     </div>
-     <div class="w3-half w3-container">
-       <h2>Cards</h2>
-       <button onclick="document.getElementById('card_form').style.display='block'" class="w3-button w3-black">new card</button>
+     <div class="w3-quarter w3-container">
+           <h2>Groups</h2>
+       </div>
+
+     <div class="w3-threequarter w3-container">
+        <div style="float:center">
+          <h2>Cards</h2>
+        </div>
+       <div style="float:right">
+         <button onclick="document.getElementById('card_form').style.display='block'" class="w3-button w3-black">new card</button>
+       </div>
+       <br>
+       {% for card in cards %}
+
+          <div class="w3-card-4 w3-white" style="width:40%;">
+            <header class="w3-container">
+              <h2>{{ card['title'] }}</h2>
+            </header>
+
+            <div class="w3-container">
+              <p>{{ card['content'] }}</p>
+            </div>
+
+            <footer class="w3-container">
+            </footer>
+          </div>
+          <br>
+       {% endfor %}
      </div>
    </div>
 
