--- a/app/static/styles/mypersonalstyle.css
+++ b/app/static/styles/mypersonalstyle.css
@@ -2,3 +2,23 @@ body{
   background-image: linear-gradient(to right top, #fbe60f, #ff9800, #ff1258, #ff00a4, #7912eb);
   background-repeat: no-repeat;
 }
+
+.group-card{
+  border: 2px solid white;
+  border-radius: 5px;
+  cursor:pointer;
+}
+.group-card-selected{
+  background-color: white;
+  color:black;
+}
+
+.float-left{
+  float:left;
+}
+.float-right{
+  float:right;
+}
+.clear{
+  clear:both;
+}
