Using ajax to post cards

--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -74,17 +74,16 @@
         <div class="w3-modal-content">
           <div class="w3-container">
             <span onclick="document.getElementById('card_form').style.display='none'" class="w3-button w3-display-topright">&times;</span>
-
-            <form class="w3-container w3-margin" method="post" action="/card">
-            <input type=hidden name="group" id="ipt_group_id" type="text">
-             <label>Title</label>
-             <input id="iptTitle"class="w3-input w3-border-0" type="text" name="title">
-             <label>Content</label>
-             <input id="iptContent"class="w3-input w3-border-0" type="textarea" name="content">
-             <label>Hint</label>
-             <input id="iptHint"class="w3-input w3-border-0" type="text" name="hint">
-            <button id="iptCreateCard"class="w3-btn w3-blue-grey">Create</button>
-            </form>
+            <div class="w3-container w3-margin">
+              <input type=hidden name="group" id="ipt_group_id" type="text">
+               <label>Title</label>
+               <input id="iptTitle"class="w3-input w3-border-0" type="text" name="title">
+               <label>Content</label>
+               <input id="iptContent"class="w3-input w3-border-0" type="textarea" name="content">
+               <label>Hint</label>
+               <input id="iptHint"class="w3-input w3-border-0" type="text" name="hint">
+              <button id="iptCreateCard"class="w3-btn w3-blue-grey">Create</button>
+            </div>
           </div>
         </div>
       </div>
