--- a/app/templates/slide/slideshow.html
+++ b/app/templates/slide/slideshow.html
@@ -5,54 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/mypersonalstyle.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/slide.css') }}">
+
     <title>Dashboard</title>
   </head>
-  <body>
+  <script src="{{ url_for('static',filename='js/pratice.js') }}"></script>
 
-    <div class="w3-content" style="max-width:800px">
-      <img class="mySlides" src="img_nature_wide.jpg" style="width:100%">
-      <img class="mySlides" src="img_snow_wide.jpg" style="width:100%">
-      <img class="mySlides" src="img_mountains_wide.jpg" style="width:100%">
+  <body>
+<div class="w3-row">
+  <div class ="w3-quarter w3-margin-top">
+    <h5>{{group['title']}}</h5>
+    <p>{{group['description']}}</p>
+  </div>
+  <div class=" w3-half w3-margin-top">
+    <div class="w3-content">
+      {% if cards %}
+        {% for card in cards %}
+
+        <div class="w3-card-4 cards w3-white">
+
+           <header class="w3-container w3-white w3-center ">
+             <p class="w3-right">Total cards: {{cards|length}}</p>
+           </header>
+
+           <div class="w3-container w3-white">
+             <h1 class="w3-center">{{ card['title'] }}</h1>
+           </div>
+
+           <footer class="w3-container w3-white">
+             <p class="w3-center" id="content"></p>
+
+           </footer>
+
+        </div>
+        {% endfor %}
+       {% endif %}
+
     </div>
 
     <div class="w3-center">
       <div class="w3-section">
-        <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ Prev</button>
-        <button class="w3-button w3-light-grey" onclick="plusDivs(1)">Next ❯</button>
+        <button class="w3-button w3-light-grey" id="btnPrev">❮ Prev</button>
+        <button class="w3-button w3-light-grey" id="btnNext">Next ❯</button>
       </div>
-      <button class="w3-button demo" onclick="currentDiv(1)">1</button>
-      <button class="w3-button demo" onclick="currentDiv(2)">2</button>
-      <button class="w3-button demo" onclick="currentDiv(3)">3</button>
     </div>
+  </div>
+  <div class="w3-quarter w3-margin-top">
+    time lapsed
 
-    <script>
-    var slideIndex = 1;
-    showDivs(slideIndex);
-
-    function plusDivs(n) {
-      showDivs(slideIndex += n);
-    }
-
-    function currentDiv(n) {
-      showDivs(slideIndex = n);
-    }
-
-    function showDivs(n) {
-      var i;
-      var x = document.getElementsByClassName("mySlides");
-      var dots = document.getElementsByClassName("demo");
-      if (n > x.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = x.length}
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" w3-red", "");
-      }
-      x[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " w3-red";
-    }
-    </script>
+  </div>
+</div>
 
   </body>
+
 </html>
