Add a new page for training mode

--- a/app/templates/home/dashboard.html
+++ b/app/templates/home/dashboard.html
@@ -16,7 +16,9 @@
       {% if messages %}
         <ul class=flashes>
         {% for message in messages %}
+          {% if message!= None %}
           <li>{{ message }}</li>
+          {% endif %}
         {% endfor %}
         </ul>
       {% endif %}
